--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <div class="intro">
                 <p>Hi,<br> i'am <span>Sathya</span><br></p>
                 <a href="#contact"><button class="contact-btn"  >contact</button></a>
-                <a href="assets/Csbs Sathya .pdf"><button class="contact-btn"  >Resume</button></a>
+                <a href="./assets/resume.pdf"><button class="contact-btn"  >Resume</button></a>
                 <div class="social"  >
                     <a href="https://www.linkedin.com/in/sathya-shanmugam-b9148a261/" target="_blank"><img src="assets/linkedin.png" alt="linkedin" ></a>
                     <a href="https://github.com/Sathyashans" target="_blank"><img src="assets/github.png" alt="github" ></a>
                 </div>
             </div>
             <div class="clear"></div>
-                <img src="assets/sathya.jpg" alt="" class="me">            
+                <img src="./assets/sathya.jpg" alt="" class="me">            
         </div>
     </div>
     <!--ABOUT-->
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="about">
             <div class="col-left">
-                <img src="assets/sathya.jpg" class="myimg" alt="">
+                <img src="./assets/sathya.jpg" class="myimg" alt="">
             </div>
             <div class="col-right">
                 <span class="intro-name">Sathya</span>
@@ -81,7 +81,7 @@
     </div>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/college.jpeg" alt="">
+            <img src="./assets/college.jpeg" alt="">
         </div>
         <div class="about-content">
 
@@ -94,7 +94,7 @@
         </section>
         <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/barani.jpeg" alt="">
+            <img src="./assets/barani.jpeg" alt="">
         </div>
         <div class="about-content">
 
@@ -105,7 +105,7 @@
         </section>
         <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/little.jpeg" alt="">
+            <img src="./assets/little.jpeg" alt="">
         </div>
         <div class="about-content">
 
@@ -176,7 +176,7 @@
                 <div class="col-right">
                     
                     <div class="container">
-                        <img src="assets/skill1.jpeg" alt="working...">
+                        <img src="./assets/skill1.jpeg" alt="working...">
                     </div>
                     
                 </div>
@@ -190,12 +190,26 @@
 
                 <div class="container bd-grid">
                     <div class="work-img">
-                        <img src="assets/rock paper scissor.png" alt="work">
+                        <img src="./assets/rock paper scissor.png" alt="work">
                         <div class="text">
                             <h3>GAME</h3>
                             <p>Rock Paper Scissor Game</p>
                             <div class="btn">
                                 <a href="https://github.com/Sathyashans/rock-paper-scissor-Game" target="_blank"><button class="visit">Visit</button></a> 
+                            </div>
+                        </div>
+                        <div class="overlay"></div>
+                    </div>
+                </div>
+
+                <div class="container bd-grid">
+                    <div class="work-img">
+                        <img src="./assets/smart.jpg" alt="work">
+                        <div class="text">
+                            <h3>IOT</h3>
+                            <p>Smart Parking System</p>
+                            <div class="btn">
+                                <a href="https://github.com/Sathyashans/Smart-Parking-System.git" target="_blank"><button class="visit">Visit</button></a> 
                             </div>
                         </div>
                         <div class="overlay"></div>
